Fixed overflow on post.

--- a/src/comps/board/post/index.css
+++ b/src/comps/board/post/index.css
@@ -3,13 +3,19 @@
     grid-template-columns: 0.2fr 1fr;
     border: 1px solid grey;
     border-radius: 1em;
+    overflow: scroll;
 }
 
-.username-post span {
-    display: block;
+.username-and-post div {
+    /* display: block; */
+    padding: 0.2em;
 }
 
-/* .post-text {
-} */
+.post-username {
+    font-size: 0.9em;
+}
 
-/* Img has same styles in profile-pic within twoot index.css */
+.no-wrap {
+    word-break: break-all;
+}
+/* Img has same styles in profile-pic within twoot index.css */ ;
